--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postbuild": "npx next-sitemap"
   },
   "dependencies": {
+    "@fontsource/work-sans": "^4.5.1",
     "@walltowall/helpers": "^7.0.0",
     "clsx": "^1.1.1",
     "next": "^11.1.2",
