--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@fontsource/work-sans": "^4.5.1",
+    "@prismicio/client": "^6.0.0-alpha.12",
+    "@prismicio/helpers": "^2.0.0-alpha.7",
+    "@prismicio/types": "^0.1.10",
     "@walltowall/helpers": "^7.0.0",
     "clsx": "^1.1.1",
     "next": "^11.1.2",
