--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"next": "^11.1.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-map-to-components": "^1.2.1",
 		"tiny-invariant": "^1.1.0"
 	},
 	"devDependencies": {
