--- a/package.json
+++ b/package.json
@@ -1,55 +1,59 @@
 {
-	"name": "nextjs-ww-starter",
+	"name": "HLL_4717",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"analyze": "ANALYZE=true npm run build",
-		"postbuild": "npx next-sitemap"
+		"format": "prettier --write 'src/**/*.{js,ts,tsx,md,mdx}' 'gatsby-*.js' 'docs/**/*.md'",
+		"clean": "gatsby clean",
+		"dev": "gatsby develop",
+		"build": "gatsby build",
+		"serve": "gatsby serve",
+		"codegen": "graphql-codegen --config graphql-codegen.yml"
 	},
 	"dependencies": {
 		"@fontsource/work-sans": "^4.5.1",
-		"@prismicio/client": "^6.0.0-alpha.12",
-		"@prismicio/helpers": "^2.0.0-alpha.7",
-		"@prismicio/types": "^0.1.10",
+		"@prismicio/helpers": "^2.0.0-alpha.8",
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
-		"next": "^11.1.2",
+		"gatsby": "^3.13.0",
+		"graphql-request": "^3.5.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-head": "^3.4.0",
 		"react-map-to-components": "^1.2.1",
 		"tiny-invariant": "^1.1.0"
 	},
 	"devDependencies": {
-		"@netlify/plugin-nextjs": "^3.9.0",
+		"@graphql-codegen/cli": "^2.2.0",
+		"@graphql-codegen/typescript": "^2.2.2",
+		"@graphql-codegen/typescript-operations": "^2.1.4",
+		"@netlify/plugin-gatsby": "^1.0.3",
 		"@next/bundle-analyzer": "^11.1.2",
 		"@tailwindcss/aspect-ratio": "^0.2.1",
 		"@tailwindcss/forms": "^0.3.3",
 		"@themosaad/tailwindcss-capsize": "^1.0.0",
-		"@types/react": "^17.0.20",
+		"@types/react": "^17.0.21",
 		"@types/react-dom": "^17.0.9",
-		"@typescript-eslint/eslint-plugin": "^4.31.0",
-		"@typescript-eslint/parser": "^4.31.0",
+		"@typescript-eslint/eslint-plugin": "^4.31.1",
+		"@typescript-eslint/parser": "^4.31.1",
+		"anser": "^2.0.2",
 		"autoprefixer": "^10.3.4",
 		"eslint": "^7.32.0",
-		"eslint-config-next": "^11.1.2",
 		"eslint-plugin-react": "^7.25.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
-		"netlify-plugin-cache-nextjs": "^1.6.1",
-		"next-compose-plugins": "^2.2.1",
-		"next-sitemap": "^1.6.168",
+		"gatsby-plugin-catch-links": "^3.13.0",
+		"gatsby-plugin-image": "^1.13.0",
+		"gatsby-plugin-manifest": "^3.13.0",
+		"gatsby-plugin-prismic-previews": "^4.1.3",
+		"gatsby-plugin-react-helmet-async": "^1.2.0",
+		"gatsby-plugin-sitemap": "^4.9.0",
+		"gatsby-source-prismic": "^4.1.2",
 		"postcss": "^8.3.6",
 		"postcss-nested": "^5.0.6",
-		"preact": "^10.5.14",
-		"preact-ssr-prepass": "^1.2.0",
 		"prettier": "^2.4.0",
 		"prettier-plugin-jsdoc": "^0.3.24",
 		"tailwindcss": "^2.2.15",
-		"typescript": "^4.4.2",
-		"typescript-plugin-css-modules": "^3.4.0"
+		"typescript": "^4.4.3"
 	}
 }
