--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,6 @@
     "./node_modules"
   ],
   "compilerOptions": {
-    "plugins": [
-      {
-        "name": "typescript-plugin-css-modules"
-      }
-    ],
-
     "target": "ESNext",
     "module": "ESNext",
     "noEmit": true,
@@ -21,7 +15,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "allowJs": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "lib": [
       "dom",
       "dom.iterable",
@@ -32,9 +26,5 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "baseUrl": ".",
-    "paths": {
-      "@/public/*": ["public/*"],
-      "@/*": ["src/*"]
-    }
   }
 }
