feat: swap to gatsby

--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
-PRISMIC_REPOSITORY_NAME=honolulu-pride
-PRISMIC_ACCESS_TOKEN=MC5ZVC10VWhJQUFDc0FQSTE3.VO-_vQEt77-9F--_ve-_vTQY77-977-9fCl977-9Dgdt77-977-9Ye-_vSPvv71UAe-_ve-_vRke77-9
+# Prismic repository name
+GATSBY_PRISMIC_REPOSITORY_NAME=honolulu-pride
+
+# Prismic access token
+# See: https://user-guides.prismic.io/en/articles/1036153-generating-an-access-token
+GATSBY_PRISMIC_ACCESS_TOKEN=MC5ZVC10VWhJQUFDc0FQSTE3.VO-_vQEt77-9F--_ve-_vTQY77-977-9fCl977-9Dgdt77-977-9Ye-_vSPvv71UAe-_ve-_vRke77-9
+
+# Google Tag Manager container ID
+GOOGLE_TAGMANAGER_ID=
+
+# Client documentation URL to create a /docs redirect
+CLIENT_DOCS_URL=
+
+# Typekit Web Project ID
+TYPEKIT_PROJECT_ID=
