--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
 		"gatsby": "^3.13.0",
+		"gatsby-plugin-image": "^1.13.0",
+		"gatsby-plugin-catch-links": "^3.13.0",
+		"gatsby-plugin-prismic-previews": "^4.1.3",
 		"graphql-request": "^3.5.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
@@ -42,11 +45,8 @@
 		"eslint-plugin-react": "^7.25.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
-		"gatsby-plugin-catch-links": "^3.13.0",
-		"gatsby-plugin-image": "^1.13.0",
 		"gatsby-plugin-manifest": "^3.13.0",
-		"gatsby-plugin-prismic-previews": "^4.1.3",
-		"gatsby-plugin-react-helmet-async": "^1.2.0",
+		"gatsby-plugin-postcss": "^4.13.0",
 		"gatsby-plugin-sitemap": "^4.9.0",
 		"gatsby-source-prismic": "^4.1.2",
 		"postcss": "^8.3.6",
