--- a/graphql-codegen.yml
+++ b/graphql-codegen.yml
@@ -10,6 +10,7 @@ generates:
       - typescript
       - typescript-operations
     config:
+      skipTypename: true
       preResolveTypes: true
       maybeValue: T | undefined
       scalars:
