--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "allowJs": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "lib": [
       "dom",
       "dom.iterable",
