--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "HLL_4717",
+	"name": "hll_4778",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -16,13 +16,14 @@
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
 		"gatsby": "^3.13.0",
-		"gatsby-plugin-image": "^1.13.0",
 		"gatsby-plugin-catch-links": "^3.13.0",
+		"gatsby-plugin-image": "^1.13.0",
 		"gatsby-plugin-prismic-previews": "^4.1.3",
 		"graphql-request": "^3.5.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-head": "^3.4.0",
+		"react-intersection-observer": "^8.32.1",
 		"react-map-to-components": "^1.2.1",
 		"tiny-invariant": "^1.1.0"
 	},
