--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@prismicio/helpers": "^2.0.0-alpha.8",
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
+		"framer-motion": "^4.1.17",
 		"gatsby": "^3.13.0",
 		"gatsby-plugin-catch-links": "^3.13.0",
 		"gatsby-plugin-image": "^1.13.0",
