--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
 		"gatsby-plugin-manifest": "^3.13.0",
+		"gatsby-plugin-netlify": "^3.14.0",
 		"gatsby-plugin-postcss": "^4.13.0",
 		"gatsby-plugin-sitemap": "^4.9.0",
 		"gatsby-source-prismic": "^4.1.2",
