--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@fontsource/work-sans": "^4.5.1",
+		"@heroicons/react": "^1.0.4",
 		"@prismicio/helpers": "^2.0.0-alpha.8",
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
@@ -20,6 +21,7 @@
 		"gatsby-plugin-catch-links": "^3.13.0",
 		"gatsby-plugin-prismic-previews": "^4.1.3",
 		"graphql-request": "^3.5.0",
+		"keen-slider": "^5.5.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-head": "^3.4.0",
