--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@fontsource/work-sans": "^4.5.1",
 		"@prismicio/helpers": "^2.0.0-alpha.8",
+		"@radix-ui/react-dialog": "^0.1.0",
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
 		"framer-motion": "^4.1.17",
