--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"format": "prettier --write 'src/**/*.{js,ts,tsx,md,mdx}' 'gatsby-*.js' 'docs/**/*.md'",
 		"clean": "gatsby clean",
-		"dev": "gatsby develop",
+		"dev": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
 		"build": "gatsby build",
 		"serve": "gatsby serve",
 		"codegen": "graphql-codegen --config graphql-codegen.yml"
@@ -17,8 +17,8 @@
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
 		"framer-motion": "^4.1.17",
-		"gatsby": "^3.13.0",
-		"gatsby-plugin-catch-links": "^3.13.0",
+		"gatsby": "^3.14.0",
+		"gatsby-plugin-catch-links": "^3.14.0",
 		"gatsby-plugin-prismic-previews": "^4.1.3",
 		"graphql-request": "^3.5.0",
 		"react": "17.0.2",
@@ -39,25 +39,25 @@
 		"@tailwindcss/aspect-ratio": "^0.2.1",
 		"@tailwindcss/forms": "^0.3.3",
 		"@themosaad/tailwindcss-capsize": "^1.0.0",
-		"@types/react": "^17.0.21",
+		"@types/react": "^17.0.24",
 		"@types/react-dom": "^17.0.9",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
+		"@typescript-eslint/eslint-plugin": "^4.31.2",
+		"@typescript-eslint/parser": "^4.31.2",
 		"anser": "^2.0.2",
-		"autoprefixer": "^10.3.4",
+		"autoprefixer": "^10.3.5",
 		"eslint": "^7.32.0",
-		"eslint-plugin-react": "^7.25.1",
+		"eslint-plugin-react": "^7.26.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
 		"gatsby-plugin-image": "^1.14.0",
-		"gatsby-plugin-manifest": "^3.13.0",
+		"gatsby-plugin-manifest": "^3.14.0",
 		"gatsby-plugin-netlify": "^3.14.0",
-		"gatsby-plugin-postcss": "^4.13.0",
-		"gatsby-plugin-sitemap": "^4.9.0",
-		"gatsby-source-prismic": "^4.1.2",
-		"postcss": "^8.3.6",
+		"gatsby-plugin-postcss": "^4.14.0",
+		"gatsby-plugin-sitemap": "^4.10.0",
+		"gatsby-source-prismic": "^4.1.6",
+		"postcss": "^8.3.7",
 		"postcss-nested": "^5.0.6",
-		"prettier": "^2.4.0",
+		"prettier": "^2.4.1",
 		"prettier-plugin-jsdoc": "^0.3.24",
 		"tailwindcss": "^2.2.15",
 		"typescript": "^4.4.3"
