--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"dependencies": {
 		"@fontsource/work-sans": "^4.5.1",
 		"@prismicio/helpers": "^2.0.0-alpha.8",
+		"@radix-ui/react-announce": "^0.1.0",
+		"@radix-ui/react-collapsible": "^0.1.0",
 		"@radix-ui/react-dialog": "^0.1.0",
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
@@ -21,6 +23,7 @@
 		"gatsby-plugin-catch-links": "^3.14.0",
 		"gatsby-plugin-prismic-previews": "^4.1.3",
 		"graphql-request": "^3.5.0",
+		"keen-slider": "^5.5.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-head": "^3.4.0",
@@ -41,10 +44,10 @@
 		"@themosaad/tailwindcss-capsize": "^1.0.0",
 		"@types/react": "^17.0.24",
 		"@types/react-dom": "^17.0.9",
-		"@typescript-eslint/eslint-plugin": "^4.31.2",
-		"@typescript-eslint/parser": "^4.31.2",
+		"@typescript-eslint/eslint-plugin": "^4.32.0",
+		"@typescript-eslint/parser": "^4.32.0",
 		"anser": "^2.0.2",
-		"autoprefixer": "^10.3.5",
+		"autoprefixer": "^10.3.6",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.26.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
@@ -55,11 +58,11 @@
 		"gatsby-plugin-postcss": "^4.14.0",
 		"gatsby-plugin-sitemap": "^4.10.0",
 		"gatsby-source-prismic": "^4.1.6",
-		"postcss": "^8.3.7",
+		"postcss": "^8.3.8",
 		"postcss-nested": "^5.0.6",
 		"prettier": "^2.4.1",
 		"prettier-plugin-jsdoc": "^0.3.24",
-		"tailwindcss": "^2.2.15",
+		"tailwindcss": "^2.2.16",
 		"typescript": "^4.4.3"
 	}
 }
