--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	},
 	"dependencies": {
 		"@fontsource/work-sans": "^4.5.1",
+		"@lukeed/uuid": "^2.0.0",
 		"@prismicio/helpers": "^2.0.0-alpha.8",
 		"@radix-ui/react-announce": "^0.1.0",
 		"@radix-ui/react-collapsible": "^0.1.0",
 		"@radix-ui/react-dialog": "^0.1.0",
 		"@walltowall/helpers": "^7.0.0",
 		"clsx": "^1.1.1",
+		"firebase": "^9.1.0",
 		"framer-motion": "^4.1.17",
 		"gatsby": "^3.14.0",
 		"gatsby-plugin-catch-links": "^3.14.0",
@@ -31,7 +33,10 @@
 		"react-map-to-components": "^1.2.1",
 		"react-merge-refs": "^1.1.0",
 		"tiny-invariant": "^1.1.0",
-		"use-media": "^1.4.0"
+		"use-local-storage-state": "^11.0.0",
+		"use-media": "^1.4.0",
+		"use-persisted-state": "^0.3.3",
+		"zod": "^3.9.4"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^1.21.6",
@@ -44,6 +49,7 @@
 		"@themosaad/tailwindcss-capsize": "^1.0.0",
 		"@types/react": "^17.0.24",
 		"@types/react-dom": "^17.0.9",
+		"@types/use-persisted-state": "^0.3.0",
 		"@typescript-eslint/eslint-plugin": "^4.32.0",
 		"@typescript-eslint/parser": "^4.32.0",
 		"anser": "^2.0.2",
