--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ CLIENT_DOCS_URL=
 
 # Typekit Web Project ID
 TYPEKIT_PROJECT_ID=
+
+# Gatsby Functions node version
+AWS_LAMBDA_JS_RUNTIME=nodejs14.x
