--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"gatsby-plugin-catch-links": "^3.14.0",
 		"gatsby-plugin-prismic-previews": "^4.1.3",
 		"graphql-request": "^3.5.0",
+		"just-shuffle": "^3.1.0",
 		"keen-slider": "^5.5.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
