--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"codegen": "graphql-codegen --config graphql-codegen.yml"
 	},
 	"dependencies": {
+		"@fast-csv/format": "^4.3.5",
 		"@fontsource/work-sans": "^4.5.1",
 		"@lukeed/uuid": "^2.0.0",
 		"@prismicio/helpers": "^2.0.0-alpha.8",
