--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@radix-ui/react-announce": "^0.1.0",
 		"@radix-ui/react-collapsible": "^0.1.0",
 		"@radix-ui/react-dialog": "^0.1.0",
+		"@radix-ui/react-id": "^0.1.0",
 		"@walltowall/helpers": "^7.0.2",
 		"clsx": "^1.1.1",
 		"firebase": "^9.1.0",
