--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@tailwindcss/aspect-ratio": "^0.2.1",
 		"@tailwindcss/forms": "^0.3.3",
 		"@themosaad/tailwindcss-capsize": "^1.0.0",
+		"@types/loadable__component": "^5.13.4",
 		"@types/react": "^17.0.24",
 		"@types/react-dom": "^17.0.9",
 		"@types/use-persisted-state": "^0.3.0",
@@ -63,11 +64,11 @@
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
 		"gatsby-plugin-image": "^1.14.0",
+		"gatsby-plugin-loadable-components-ssr": "^3.4.0",
 		"gatsby-plugin-manifest": "^3.14.0",
 		"gatsby-plugin-netlify": "^3.14.0",
 		"gatsby-plugin-postcss": "^4.14.0",
 		"gatsby-plugin-sitemap": "^4.10.0",
-		"gatsby-plugin-loadable-components-ssr": "^3.4.0",
 		"gatsby-source-prismic": "^4.1.6",
 		"postcss": "^8.3.8",
 		"postcss-nested": "^5.0.6",
