feat: analytics and better font loading

--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ GATSBY_PRISMIC_REPOSITORY_NAME=honolulu-pride
 # See: https://user-guides.prismic.io/en/articles/1036153-generating-an-access-token
 GATSBY_PRISMIC_ACCESS_TOKEN=MC5ZVC10VWhJQUFDc0FQSTE3.VO-_vQEt77-9F--_ve-_vTQY77-977-9fCl977-9Dgdt77-977-9Ye-_vSPvv71UAe-_ve-_vRke77-9
 
-# Google Tag Manager container ID
-GOOGLE_TAGMANAGER_ID=
+# Google Analytics Measurement ID
+GOOGLE_MEASUREMENT_ID=G-G4K6Y1QGWY
 
 # Client documentation URL to create a /docs redirect
 CLIENT_DOCS_URL=
 
 # Typekit Web Project ID
-TYPEKIT_PROJECT_ID=
+TYPEKIT_PROJECT_ID=bry3kbj
 
 # Gatsby Functions node version
 AWS_LAMBDA_JS_RUNTIME=nodejs14.x
