--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
 		"dev": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
 		"build": "gatsby build",
 		"serve": "gatsby serve",
-		"codegen": "graphql-codegen --config graphql-codegen.yml"
+		"codegen": "graphql-codegen --config graphql-codegen.yml",
+		"storybook": "NODE_ENV=test start-storybook --quiet -s public -p 6006",
+		"build-storybook": "build-storybook",
+		"prestorybook": "npm run _copy-static-queries",
+		"_copy-static-queries": "cp -r ./public/page-data/sq/d ./public/static"
 	},
 	"dependencies": {
 		"@fast-csv/format": "^4.3.5",
@@ -42,11 +46,18 @@
 		"zod": "^3.9.4"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.15.8",
 		"@graphql-codegen/cli": "^1.21.6",
 		"@graphql-codegen/typescript": "^1.22.4",
 		"@graphql-codegen/typescript-operations": "^1.18.3",
 		"@netlify/plugin-gatsby": "^1.0.3",
 		"@next/bundle-analyzer": "^11.1.2",
+		"@storybook/addon-actions": "^6.3.10",
+		"@storybook/addon-essentials": "^6.3.10",
+		"@storybook/addon-links": "^6.3.10",
+		"@storybook/builder-webpack5": "^6.3.10",
+		"@storybook/manager-webpack5": "^6.3.10",
+		"@storybook/react": "^6.3.10",
 		"@tailwindcss/aspect-ratio": "^0.2.1",
 		"@tailwindcss/forms": "^0.3.3",
 		"@themosaad/tailwindcss-capsize": "^1.0.0",
@@ -57,6 +68,7 @@
 		"@typescript-eslint/parser": "^4.32.0",
 		"anser": "^2.0.2",
 		"autoprefixer": "^10.3.6",
+		"babel-loader": "^8.2.2",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.26.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
@@ -73,6 +85,7 @@
 		"postcss-nested": "^5.0.6",
 		"prettier": "^2.4.1",
 		"prettier-plugin-jsdoc": "^0.3.24",
+		"storybook-addon-gatsby": "^0.0.2",
 		"tailwindcss": "^2.2.16",
 		"typescript": "^4.4.3"
 	}
