--- a/package.json
+++ b/package.json
@@ -1,79 +1,96 @@
 {
-	"name": "hll_4778",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"format": "prettier --write 'src/**/*.{js,ts,tsx,md,mdx}' 'gatsby-*.js' 'docs/**/*.md'",
-		"clean": "gatsby clean",
-		"dev": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
-		"build": "gatsby build",
-		"serve": "gatsby serve",
-		"codegen": "graphql-codegen --config graphql-codegen.yml"
-	},
-	"dependencies": {
-		"@fast-csv/format": "^4.3.5",
-		"@fontsource/work-sans": "^4.5.1",
-		"@lukeed/uuid": "^2.0.0",
-		"@prismicio/helpers": "^2.0.0-alpha.8",
-		"@radix-ui/react-announce": "^0.1.0",
-		"@radix-ui/react-collapsible": "^0.1.0",
-		"@radix-ui/react-dialog": "^0.1.0",
-		"@radix-ui/react-id": "^0.1.0",
-		"@walltowall/helpers": "^7.0.2",
-		"clsx": "^1.1.1",
-		"firebase": "^9.1.0",
-		"framer-motion": "^4.1.17",
-		"gatsby": "^3.14.0",
-		"gatsby-plugin-catch-links": "^3.14.0",
-		"gatsby-plugin-prismic-previews": "^4.1.3",
-		"graphql-request": "^3.5.0",
-		"just-shuffle": "^3.1.0",
-		"keen-slider": "^5.5.1",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"react-head": "^3.4.0",
-		"react-intersection-observer": "^8.32.1",
-		"react-map-to-components": "^1.2.1",
-		"react-merge-refs": "^1.1.0",
-		"tiny-invariant": "^1.1.0",
-		"use-local-storage-state": "^11.0.0",
-		"use-media": "^1.4.0",
-		"use-persisted-state": "^0.3.3",
-		"zod": "^3.9.4"
-	},
-	"devDependencies": {
-		"@graphql-codegen/cli": "^1.21.6",
-		"@graphql-codegen/typescript": "^1.22.4",
-		"@graphql-codegen/typescript-operations": "^1.18.3",
-		"@netlify/plugin-gatsby": "^1.0.3",
-		"@next/bundle-analyzer": "^11.1.2",
-		"@tailwindcss/aspect-ratio": "^0.2.1",
-		"@tailwindcss/forms": "^0.3.3",
-		"@themosaad/tailwindcss-capsize": "^1.0.0",
-		"@types/react": "^17.0.24",
-		"@types/react-dom": "^17.0.9",
-		"@types/use-persisted-state": "^0.3.0",
-		"@typescript-eslint/eslint-plugin": "^4.32.0",
-		"@typescript-eslint/parser": "^4.32.0",
-		"anser": "^2.0.2",
-		"autoprefixer": "^10.3.6",
-		"eslint": "^7.32.0",
-		"eslint-plugin-react": "^7.26.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"eslint-plugin-tsdoc": "^0.2.14",
-		"gatsby-plugin-google-gtag": "^3.14.0",
-		"gatsby-plugin-image": "^1.14.0",
-		"gatsby-plugin-manifest": "^3.14.0",
-		"gatsby-plugin-netlify": "^3.14.0",
-		"gatsby-plugin-postcss": "^4.14.0",
-		"gatsby-plugin-sitemap": "^4.10.0",
-		"gatsby-plugin-web-font-loader": "^1.0.4",
-		"gatsby-source-prismic": "^4.1.6",
-		"postcss": "^8.3.8",
-		"postcss-nested": "^5.0.6",
-		"prettier": "^2.4.1",
-		"prettier-plugin-jsdoc": "^0.3.24",
-		"tailwindcss": "^2.2.16",
-		"typescript": "^4.4.3"
-	}
+  "name": "hll_4778",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,md,mdx}' 'gatsby-*.js' 'docs/**/*.md'",
+    "clean": "gatsby clean",
+    "dev": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "codegen": "graphql-codegen --config graphql-codegen.yml",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "dependencies": {
+    "@fast-csv/format": "^4.3.5",
+    "@fontsource/work-sans": "^4.5.1",
+    "@gatsbyjs/reach-router": "^1.3.6",
+    "@lukeed/uuid": "^2.0.0",
+    "@prismicio/helpers": "^2.0.0-alpha.8",
+    "@radix-ui/react-announce": "^0.1.0",
+    "@radix-ui/react-collapsible": "^0.1.0",
+    "@radix-ui/react-dialog": "^0.1.0",
+    "@radix-ui/react-id": "^0.1.0",
+    "@walltowall/helpers": "^7.0.2",
+    "clsx": "^1.1.1",
+    "firebase": "^9.1.0",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^3.14.0",
+    "gatsby-plugin-catch-links": "^3.14.0",
+    "gatsby-plugin-prismic-previews": "^4.1.3",
+    "graphql-request": "^3.5.0",
+    "just-shuffle": "^3.1.0",
+    "keen-slider": "^5.5.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-head": "^3.4.0",
+    "react-intersection-observer": "^8.32.1",
+    "react-map-to-components": "^1.2.1",
+    "react-merge-refs": "^1.1.0",
+    "tiny-invariant": "^1.1.0",
+    "use-local-storage-state": "^11.0.0",
+    "use-media": "^1.4.0",
+    "use-persisted-state": "^0.3.3",
+    "zod": "^3.9.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@graphql-codegen/cli": "^1.21.6",
+    "@graphql-codegen/typescript": "^1.22.4",
+    "@graphql-codegen/typescript-operations": "^1.18.3",
+    "@netlify/plugin-gatsby": "^1.0.3",
+    "@next/bundle-analyzer": "^11.1.2",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.4.9",
+    "@storybook/manager-webpack5": "^6.4.9",
+    "@storybook/react": "^6.4.9",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@themosaad/tailwindcss-capsize": "^1.0.0",
+    "@types/common-tags": "^1.8.1",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "@types/use-persisted-state": "^0.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "anser": "^2.0.2",
+    "autoprefixer": "^10.3.6",
+    "babel-loader": "^8.2.3",
+    "common-tags": "^1.8.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
+    "gatsby-plugin-google-gtag": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-postcss": "^4.14.0",
+    "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-prismic": "^4.1.6",
+    "lorem-ipsum": "^2.0.4",
+    "postcss": "^8.3.8",
+    "postcss-nested": "^5.0.6",
+    "prettier": "^2.4.1",
+    "prettier-plugin-jsdoc": "^0.3.24",
+    "storybook-addon-gatsby": "^0.0.3",
+    "storybook-css-modules-preset": "^1.1.1",
+    "tailwindcss": "^2.2.16",
+    "typescript": "^4.4.3"
+  }
 }
