--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@graphql-codegen/cli": "^1.21.6",
     "@graphql-codegen/typescript": "^1.22.4",
     "@graphql-codegen/typescript-operations": "^1.18.3",
+    "@headlessui/react": "^1.4.2",
     "@netlify/plugin-gatsby": "^1.0.3",
     "@next/bundle-analyzer": "^11.1.2",
     "@storybook/addon-actions": "^6.4.9",
