--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ GATSBY_PRISMIC_ACCESS_TOKEN=MC5ZVC10VWhJQUFDc0FQSTE3.VO-_vQEt77-9F--_ve-_vTQY77-
 GOOGLE_MEASUREMENT_ID=G-G4K6Y1QGWY
 
 # Client documentation URL to create a /docs redirect
-CLIENT_DOCS_URL=
+CLIENT_DOCS_URL=https://honolulupride-docs.netlify.app
 
 # Typekit Web Project ID
 TYPEKIT_PROJECT_ID=bry3kbj
