--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,4 @@ GATSBY_PRISMIC_REPOSITORY_NAME = "honolulu-pride"
 GOOGLE_MEASUREMENT_ID = "G-G4K6Y1QGWY"
 AWS_LAMBDA_JS_RUNTIME = "nodejs14.x"
 TYPEKIT_PROJECT_ID = "bry3kbj"
+CLIENT_DOCS_URL = "https://honolulupride-docs.netlify.app"
