feat: scaffold pride calendar slice

--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 # Prismic repository name
-GATSBY_PRISMIC_REPOSITORY_NAME=honolulu-pride
+GATSBY_PRISMIC_REPOSITORY_NAME="honolulu-pride"
 
 # Prismic access token
 # See: https://user-guides.prismic.io/en/articles/1036153-generating-an-access-token
-GATSBY_PRISMIC_ACCESS_TOKEN=MC5ZVC10VWhJQUFDc0FQSTE3.VO-_vQEt77-9F--_ve-_vTQY77-977-9fCl977-9Dgdt77-977-9Ye-_vSPvv71UAe-_ve-_vRke77-9
+GATSBY_PRISMIC_ACCESS_TOKEN="MC5ZdjZTWEJBQUFDTUFIYWlL.77-977-9EHMd77-9AS1ODALvv73vv73vv73vv71hPO-_ve-_vSTvv70jcu-_ve-_vS1c77-977-977-9Ve-_vQ"
 
 # Google Analytics Measurement ID
-GOOGLE_MEASUREMENT_ID=G-G4K6Y1QGWY
+GOOGLE_MEASUREMENT_ID="G-G4K6Y1QGWY"
 
 # Client documentation URL to create a /docs redirect
-CLIENT_DOCS_URL=https://honolulupride-docs.netlify.app
+CLIENT_DOCS_URL="https://honolulupride-docs.netlify.app"
 
 # Typekit Web Project ID
-TYPEKIT_PROJECT_ID=bry3kbj
+TYPEKIT_PROJECT_ID="bry3kbj"
 
 # Gatsby Functions node version
-AWS_LAMBDA_JS_RUNTIME=nodejs14.x
+AWS_LAMBDA_JS_RUNTIME="nodejs14.x"
