feat: more updates

--- a/graphql-codegen.yml
+++ b/graphql-codegen.yml
@@ -10,8 +10,9 @@ generates:
       - typescript
       - typescript-operations
     config:
-      skipTypename: true
+      skipTypename: false
       preResolveTypes: true
+      dedupeFragments: true
       maybeValue: T | undefined
       scalars:
         Date: unknown
